objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Item_Class__c</fullName>
        <label>Item Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Category__c</fullName>
        <label>Parent Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Brand__c</fullName>
        <label>Product Brand</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Attribute__c</fullName>
        <label>Reporting Attribute</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Know_Your_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Know Your Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Parent_Category__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Types</label>
    </listViews>
</CustomObject>